AuthGuard protection Added

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,1 +1,20 @@
-h1 Hello Krishna Ji 
+doctype html
+html(lang="en")
+    head
+        title homepage 
+        link(rel="icon" href="images/logo.svg")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css")
+        include bootstrap 
+        link(rel="stylesheet" href="stylesheets/profile.css")
+    body(style="background-color: #f2f2f2")
+        div  
+            .sidenav.sidenav-open
+            .section.section-open
+                nav.navbar.navbar-expand-sm.bg-white.xp-3.py-2
+                    button.btn.toggle-btn
+                        i.fa.fa-align-left
+                    ul.navbar-nav.ms-auto
+                        li.nav-item 
+                            a.nav-link(href='#') Testing
+
+    script(src="javascripts/profile.js") 
